--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "vite",
-		"build": "npx vite build",
-		"preview": "vite preview"
-	},
+				"dev": "vite",
+				"build": "node ./node_modules/vite/bin/vite.js build",
+				"preview": "vite preview"
+				},
 	"dependencies": {
 		"@radix-ui/react-alert-dialog": "^1.1.4",
 		"@radix-ui/react-avatar": "^1.1.2",
